projects/aws-terraform-web-server/subnet.tf
resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.web_server_vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "eu-west-2a"
  map_public_ip_on_launch = true

  tags = {
    Name = "terraform-public-subnet"
  }
}
