projects/aws-terraform-web-server/sg.tf
resource "aws_security_group" "web" {
  name        = "terraform-web-sg"
  description = "Allow SSH and HTTP traffic"
  vpc_id      = aws_vpc.web_server_vpc.id

  tags = {
    Name = "terraform-web-sg"
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
